# localLLM

./: .env.example  .gitignore  .webui_secret_key  CHECKLIST_SETUP.md  NEW_PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements-dev.txt  requirements-webui.txt  requirements.txt
.clinerules/: project_intelligence.md
.clinerules/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
config/: logging_config.yaml  models.yaml  prompt_templates.yaml  server_config.yaml
examples/: basic_completion.py  chat_session.py
notebooks/: prompt_testing.ipynb  response_analysis.ipynb
scripts/: install_models.bat  install_models.sh  run_system.bat  run_system.sh  setup.bat  setup.sh  setup_webui.bat  setup_webui.sh  test_directory.bat
src/cline/: memory_aware_router.py
src/integration/: cline_server.py
src/llm/: cline_optimized_router.py  memory_aware_router.py
src/local_llm_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/optimization/: hardware_optimization_manager.py  intelligent_context_manager.py  optimization_integration.py  optimized_model_manager.py
src/vector_store/: vector_manager.py
tests/: test_system.py
